# Plataforma_Educacional_Financeira

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CLAUDE.md  Makefile  README.md  setup_projeto.sh
backend/: alembic.ini  pyproject.toml  pytest.ini  requirements-dev.txt  setup.cfg
backend/app/: main.py
backend/app/api/v1/: __init__.py  amortization.py  contract.py  interest.py  router.py
backend/app/core/: config.py  envelope.py  errors.py  logging.py  request_id.py
backend/app/db/: base.py  session.py
backend/app/db/migrations/: env.py
backend/app/db/migrations/versions/: 20260417_0210_89360d9f55b5_initial_schema.py
backend/app/domain/: __init__.py
backend/app/domain/amortization/: __init__.py  _common.py  price.py  sac.py
backend/app/domain/interest/: __init__.py  _rounding.py  compound.py  simple.py
backend/app/schemas/amortization/: __init__.py  base.py  compare.py  price.py  sac.py
backend/app/schemas/interest/: base.py  compare.py  compound.py  simple.py
backend/app/services/amortization/: __init__.py  calcular_amortizacao_service.py
backend/app/services/interest/: calcular_juros_service.py
backend/tests/: conftest.py
backend/tests/contract/: test_amortization.py  test_contract_base.py  test_error_handling.py  test_interest.py
backend/tests/fixtures/: __init__.py  financial_cases.json  gen_fixture.py
backend/tests/integration/api/: test_health_integration.py
backend/tests/integration/api/amortization/: __init__.py  test_compare.py  test_errors.py  test_price.py  test_sac.py
backend/tests/integration/api/interest/: test_compare.py  test_compound.py  test_errors.py  test_simple.py
backend/tests/regression/pedagogical/: test_interest.py
backend/tests/unit/: test_envelope.py  test_health.py
backend/tests/unit/domain/: __init__.py
backend/tests/unit/domain/amortization/: test_price.py  test_properties.py  test_sac.py
backend/tests/unit/domain/interest/: __init__.py  test_compound.py  test_properties.py  test_simple.py
backend/tests/unit/services/amortization/: __init__.py  test_calcular_amortizacao_service.py
backend/tests/unit/services/interest/: test_calcular_juros_service.py
(+359 files in other folders)
