[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[project]
name = "plataforma-educacional-financeira-backend"
version = "0.1.0"
description = "Backend da Plataforma Educacional Financeira"
requires-python = ">=3.11"

dependencies = [
  # Web framework
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.29.0",
  "gunicorn>=22.0.0",
  # Validação
  "pydantic>=2.7.0",
  "pydantic-settings>=2.2.0",
  # ORM / DB
  "sqlalchemy>=2.0.30",
  "alembic>=1.13.0",
  "psycopg[binary,pool]>=3.1.19",
  # Cache (opcional)
  "redis>=5.0.4",
  # Logging / Observabilidade
  "structlog>=24.2.0",
  "prometheus-client>=0.20.0",
  # Exportação
  "reportlab>=4.2.0",
  "openpyxl>=3.1.3",
  # Utilitários
  "python-dotenv>=1.0.1",
  "httpx>=0.27.0",
  "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
  # Testes
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.7",
  "pytest-cov>=5.0.0",
  "pytest-xdist>=3.5.0",
  "httpx>=0.27.0",
  "hypothesis>=6.103.0",
  "schemathesis>=3.27.0",
  "mutmut>=2.4.4",
  "testcontainers[postgres]>=4.5.0",
  # Qualidade de código
  "mypy>=1.10.0",
  "ruff>=0.4.7",
  "bandit[toml]>=1.7.8",
  "pip-audit>=2.7.3",
  # Segurança
  "detect-secrets>=1.5.0",
  # Tipos
  "types-redis>=4.6.0.20240425",
]

[tool.ruff]
target-version = "py311"
line-length = 100
select = ["E", "F", "W", "I", "N", "UP", "S", "B", "A", "C4", "PT", "RET", "SIM"]
ignore = ["S101"]

[tool.ruff.isort]
known-first-party = ["app"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--strict-markers -ra"
markers = [
  "unit: testes unitários",
  "integration: testes de integração (requer DB)",
  "contract: testes de contrato",
  "regression: testes de regressão",
  "slow: testes lentos",
]

[tool.coverage.run]
source = ["app"]
omit = ["app/db/migrations/*", "tests/*"]

[tool.coverage.report]
fail_under = 75
show_missing = true

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101"]
